apps/kube-system/headlamp.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: kube-system
spec:
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  hostnames:
    - headlamp.thecluster.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
